@@ -1,31 +1,22 @@
+# PlanForge <img width="50" height="50" alt="logo" src="https://github.com/user-attachments/assets/fe46aa5b-5b5b-4b19-9e03-2f0869f1bd2c" />
 
-  # PlanForge <img width="50" height="50" alt="logo" src="https://github.com/user-attachments/assets/fe46aa5b-5b5b-4b19-9e03-2f0869f1bd2c" />
-
-
-
-An intelligent daily planner that organizes tasks, assessments, and
-activities with smart categorization. Get context-aware reminders,
-precise due dates, and a polished interface — built for those who want
-more than a basic calendar.
+An intelligent daily planner that organizes tasks, assessments, and activities with smart categorization. Get context-aware reminders, precise due dates, and a polished interface — built for those who want more than a basic calendar.
 
 ------------------------------------------------------------------------
 
-📸 Screenshots
-<img width="1964" height="973" alt="image" src="https://github.com/user-attachments/assets/d73bbcc9-9399-465d-bf0e-c71067d3986d" />
+📸 Screenshots  
+<img width="1964" height="973" alt="image" src="https://github.com/user-attachments/assets/d73bbcc9-9399-465d-bf0e-c71067d3986d" />  
 <img width="1964" height="982" alt="image" src="https://github.com/user-attachments/assets/1ffd4b5e-9b0e-4e6f-afe1-7795ec442fcb" />
 
 ------------------------------------------------------------------------
 
 ✨ Features
 
--   Smart Task Organization: Automatically categorize tasks,
-    assessments, and activities.
+-   Smart Task Organization: Automatically categorize tasks, assessments, and activities.
 -   Context-Aware Reminders: Never miss a deadline with timely alerts.
 -   Precise Due Dates: Schedule tasks with actionable due dates.
--   Custom UI: Built with JavaFX, custom fonts (Lexend), and animated
-    transitions.
--   Perfect for Students & Professionals: Designed for productivity and
-    efficient time management.
+-   Custom UI: Built with JavaFX, custom fonts (Lexend), and animated transitions.
+-   Perfect for Students & Professionals: Designed for productivity and efficient time management.
 
 ------------------------------------------------------------------------
 
@@ -35,26 +26,35 @@ more than a basic calendar.
 -   Framework: JavaFX
 -   Topics: Application, Calendar, To-Do List, Task Management
 
-
 ------------------------------------------------------------------------
 
-🚀 Getting Started
+🚀 Installation & Running
 
-1.  Clone the repository
+**Important:**  
+You must download [JDK 23](https://jdk.java.net/23/) and place it inside the `PlanForge` directory before running the application.
 
-        git clone https://github.com/KSaifStack/PlanForge.git
-        cd PlanForge
+1.  Clone the repository:
 
-2.  Open in your preferred Java IDE (IntelliJ IDEA, Eclipse, etc.)
+    ```sh
+    git clone https://github.com/KSaifStack/PlanForge.git
+    cd PlanForge
+    ```
 
-3.  Run the application
+2.  Download JDK 23 from [jdk.java.net/23](https://jdk.java.net/23/) and extract it directly into the `PlanForge` folder.  
+    The directory structure should look like this:
+    ```
+    PlanForge/
+      ├── jdk-23/
+      ├── PlanForge.exe
+      ├── src/
+      ├── README.md
+      └── ... (other files)
+    ```
 
-    -   Ensure you have Java 11+ installed.
+3.  **To Run PlanForge:**  
+    Simply double-click on `PlanForge.exe` in the `PlanForge` folder to start the application.
 
-    -   Run with JavaFX configured:
-
-            javac --module-path "path/to/javafx/lib" --add-modules javafx.controls,javafx.fxml -d bin src/com/planforge/*.java
-            java --module-path "path/to/javafx/lib" --add-modules javafx.controls,javafx.fxml -cp bin com.planforge.Main
+    > **Note:** The application requires JDK 23 to be present inside the `PlanForge` directory in order to work properly.
 
 ------------------------------------------------------------------------
 
@@ -63,12 +63,6 @@ more than a basic calendar.
 Contributions are welcome!
 - Open an issue for bugs or feature requests.
 - Submit pull requests for improvements.
-
-------------------------------------------------------------------------
-
-📜 License
-
-No license specified yet. Please contact the repo owner for usage terms.
 
 ------------------------------------------------------------------------
 
